--- a/horilla/employee/templates/dashboard/visa_expiry_container.html
+++ b/horilla/employee/templates/dashboard/visa_expiry_container.html
@@ -3,22 +3,25 @@
 
 {% if visa_expiries %}
     <div class="oh-card-dashboard oh-card-dashboard--no-scale oh-card-dashboard--transparent mt-3">
-        <div class="oh-card-dashboard__header oh-card-dashboard__header--divider">
+        <div class="oh-card-dashboard__header oh-card-dashboard__header--divider" style="display:flex;align-items:center;justify-content:space-between;">
             <span class="oh-card-dashboard__title">{% trans "Visa Expiry" %}</span>
+            <a href="{% url 'visa-expiry-list' %}" class="oh-btn oh-btn--link" style="font-size:0.9rem;">{% trans "View all" %}</a>
         </div>
         <div class="oh-card-dashboard__body">
             <ul class="oh-card-dashboard__user-list">
                 {% for visa_expiry in visa_expiries %}
                 <li class="oh-card-dashboard__user-item">
-                    <div class="oh-profile oh-profile--md">
-                        <div class="oh-profile__avatar mr-1">
-                            <img src="{{visa_expiry.profile}}" class="oh-profile__image" alt="{{visa_expiry.name}}" />
+                    <a href="{% url 'employee-view-individual' visa_expiry.id %}" style="text-decoration:none;color:inherit;">
+                        <div class="oh-profile oh-profile--md">
+                            <div class="oh-profile__avatar mr-1">
+                                <img src="{{visa_expiry.profile}}" class="oh-profile__image" alt="{{visa_expiry.name}}" />
+                            </div>
+                            <div>
+                                <span class="oh-profile__name oh-text--dark">{{visa_expiry.name}}</span>
+                                <span class="oh-text--xsmall">{{visa_expiry.visa_expiry_date}} - {{visa_expiry.daysUntilExpiry}}</span>
+                            </div>
                         </div>
-                        <div>
-                            <span class="oh-profile__name oh-text--dark">{{visa_expiry.name}}</span>
-                            <span class="oh-text--xsmall">{{visa_expiry.visa_expiry_date}} - {{visa_expiry.daysUntilExpiry}}</span>
-                        </div>
-                    </div>
+                    </a>
                 </li>
                 {% endfor %}
             </ul>
