--- a/horilla/templates/dashboard.html
+++ b/horilla/templates/dashboard.html
@@ -180,7 +180,7 @@
                         </a>
                     </div>
                     <div class="col-12 col-sm-12 col-md-6 col-lg-4">
-                        <a href="{% url 'employee-view' %}" style="text-decoration: none">
+                        <a href="{% url 'visa-expiry-list' %}" style="text-decoration: none">
                             <div class="oh-card-dashboard oh-card-dashboard--danger tile">
                                 <div class="oh-card-dashboard__header">
                                     <span class="oh-card-dashboard__title">{% trans "Visa Expiring Soon" %}</span>
