--- a/horilla/templates/went_wrong.html
+++ b/horilla/templates/went_wrong.html
@@ -119,8 +119,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horilla</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="{% if white_label_company.icon %}{{white_label_company.icon.url}} {% else %}{% static 'favicons/favicon-32x32.png' %}{% endif %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% if white_label_company.icon %}{{white_label_company.icon.url}} {% else %}{% static 'favicons/favicon-16x16.png' %}{% endif %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/ui/sbm_logo.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/ui/sbm_logo.png' %}">
 </head>
 
 <body>
