--- a/horilla/templates/dashboard.html
+++ b/horilla/templates/dashboard.html
@@ -196,6 +196,23 @@
                             </div>
                         </a>
                     </div>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                        <a href="{% url 'company-license-edit' %}" style="text-decoration: none">
+                            <div class="oh-card-dashboard oh-card-dashboard--warning tile">
+                                <div class="oh-card-dashboard__header">
+                                    <span class="oh-card-dashboard__title">{% trans "Company License Expiry" %}</span>
+                                </div>
+                                <div class="oh-card-dashboard__body">
+                                    <div class="oh-card-dashboard__counts">
+                                        <span class="oh-card-dashboard__count" hx-get="{% url 'company-license-status' %}"
+                                            hx-trigger="load">
+                                            <div style="height: 67px;"></div>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 {% endif %}
                 <div class="oh-dashboard__movable-cards row mt-4" id="tileContainer">
                     {% include "dashboard_tile_container.html" %}
