--- a/horilla/templates/index.html
+++ b/horilla/templates/index.html
@@ -33,13 +33,13 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'build/css/summernote-lite.min.css' %}" />
     <link rel="stylesheet" href="{% static 'build/css/orgChart.css' %}" />
-    <link rel="stylesheet" href="{% static '/jquery/jqueryui.css' %}">
+    <link rel="stylesheet" href="{% static 'jquery/jqueryui.css' %}">
     <link rel="stylesheet" href="{% static 'build/css/pivottable.min.css' %}" />
-    <script src="{% static '/jquery/ajax.js' %}"></script>
-    <script src="{% static '/jquery/jquery.min.js' %}"></script>
-    <script src="{% static '/jquery/jqueryui.js' %}"></script>
-    <script src="{% static '/base/toggleColumn.js' %}"></script>
-    <script src="{% static '/build/js/orgChart.js' %}"></script>
+    <script src="{% static 'jquery/ajax.js' %}"></script>
+    <script src="{% static 'jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'jquery/jqueryui.js' %}"></script>
+    <script src="{% static 'base/toggleColumn.js' %}"></script>
+    <script src="{% static 'build/js/orgChart.js' %}"></script>
     <script src="{% static 'build/js/driver.js' %}"></script>
     <script src="{% static 'build/js/clearFilter.js' %}"></script>
 
