changed title sbm hrm

--- a/horilla/templates/emails/visa_expiry_admin_notification.html
+++ b/horilla/templates/emails/visa_expiry_admin_notification.html
@@ -165,9 +165,9 @@
             </p>
         </div>
         <div class="email-footer">
-            <p class="footer-text">This is an automated notification from Horilla HRM System</p>
+            <p class="footer-text">This is an automated notification from SBM HRM System</p>
             <p class="footer-text">Please do not reply to this email</p>
-            <p class="footer-text">&copy; {{ "now"|date:"Y" }} Horilla. All rights reserved.</p>
+            <p class="footer-text">&copy; {{ "now"|date:"Y" }} SBM. All rights reserved.</p>
         </div>
     </div>
 </body>
