--- a/horilla/templates/initialize_database/horilla_user_signup.html
+++ b/horilla/templates/initialize_database/horilla_user_signup.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <div class="oh-onboarding-card__header">
-    <span class="oh-onboarding-card__company-name">Horilla HRMS</span>
+    <span class="oh-onboarding-card__company-name">SBM HRMS</span>
     <ul class="oh-onboarding-card__step">
         <li class="oh-onboarding-card__step">
             <div class="oh-onboarding-card__count">1</div>
@@ -52,7 +52,7 @@
         <div class="col-12 col-sm-12 col-md-6 col-lg-6">
             <div class="oh-input-group">
                 <label class="oh-label" for="email">{% trans "Email" %}</label>
-                <input type="text" id="email" name="email" class="oh-input w-100" placeholder="e.g. adam.luis@horilla.com"
+                <input type="text" id="email" name="email" class="oh-input w-100" placeholder="e.g. hr@sbm.com"
                     required />
             </div>
         </div>
