--- a/horilla/templates/initialize_database/horilla_user.html
+++ b/horilla/templates/initialize_database/horilla_user.html
@@ -50,7 +50,7 @@
         <main class="oh-auth">
             <div class="oh-onboarding-card" style="max-height: 790px; max-width: 975px" id="ohAuthCard">
                 <div class="oh-onboarding-card__header">
-                    <span class="oh-onboarding-card__company-name">Horilla HRMS</span>
+                    <span class="oh-onboarding-card__company-name">SBM HRMS</span>
                     <ul class="oh-onboarding-card__steps">
                         <li class="oh-onboarding-card__step oh-onboarding-card__step--active">
                             <div class="oh-onboarding-card__count">1</div>
