--- a/horilla/templates/went_wrong.html
+++ b/horilla/templates/went_wrong.html
@@ -118,7 +118,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Horilla</title>
+    <title>SBM</title>
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/ui/sbm_logo.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/ui/sbm_logo.png' %}">
 </head>
